# WSCS

./: .editorconfig  .gitignore  CMakeLists.txt  readme.md  wscs.cppcheck
.github/workflows/: clang.yml  cppcheck.yml  gcc.yml  msvc.yml
tests/: CMakeLists.txt  main.cpp
wsbc512/: CMakeLists.txt  readme.md  wsbc512.cpp  wsbc512.hpp
wshf2/: CMakeLists.txt  readme.md  wshf2.cpp  wshf2.hpp
wssc8/: CMakeLists.txt  readme.md  wssc8.cpp  wssc8.hpp
